# ALVR-CG-XDMMC

./: .gitignore  .gitmodules  Cargo.toml  README.md
alvr/openxr-client/alxr-android-client/: Cargo.toml  debug.keystore
alvr/openxr-client/alxr-android-client/pico/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico-neo/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico-v4/: Cargo.toml
alvr/openxr-client/alxr-android-client/quest/: Cargo.toml
alvr/openxr-client/alxr-android-client/src/: lib.rs  permissions.rs  wifi_manager.rs
alvr/openxr-client/alxr-client/: Cargo.toml
alvr/openxr-client/alxr-client/src/: main.rs
alvr/openxr-client/alxr-client/uwp/: Cargo.toml  alxr_client_TemporaryKey.pfx  build_app_bundle.bat  build_app_package.bat  cargo_build_uwp.bat  install_uwp_toolchain.bat
alvr/openxr-client/alxr-client/uwp/.build/: main.rs
alvr/openxr-client/alxr-client/uwp/.cargo/: config.toml
alvr/openxr-client/alxr-client/uwp/templates/: AppxManifest.xml  FileMapping.ini
alvr/openxr-client/alxr-client/uwp/uwp-runtime/: AppxBlockMap.xml  AppxManifest.xml  AppxSignature.p7x  README.txt
alvr/openxr-client/alxr-client/uwp/uwp-runtime/AppxMetadata/: CodeIntegrity.cat
alvr/openxr-client/alxr-common/: Cargo.toml
alvr/openxr-client/alxr-common/src/: audio.rs  connection.rs  connection_utils.rs  lib.rs
alvr/openxr-client/alxr-engine-sys/: Cargo.toml  build.rs
alvr/openxr-client/alxr-engine-sys/.cargo/: config .toml.backup
alvr/openxr-client/alxr-engine-sys/android/: build.gradle  settings.gradle
alvr/openxr-client/alxr-engine-sys/android/app/: build.gradle
alvr/openxr-client/alxr-engine-sys/android/app/src/main/: AndroidManifest.xml
alvr/openxr-client/alxr-engine-sys/android/app/src/main/res/values/: strings.xml  themes.xml
alvr/openxr-client/alxr-engine-sys/android/app/src/main/res/values-night/: themes.xml
alvr/openxr-client/alxr-engine-sys/android/gradle/wrapper/: gradle-wrapper.properties
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/: .gitignore
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/.reuse/: dep5
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/specification/registry/: xr.xml
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/: CMakeLists.txt
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/: AndroidManifest.xml  CMakeLists.txt  alxr_ctypes.h  alxr_engine.cpp  alxr_engine.h  check.h  common.h  concurrent_queue.h  d3d_common.cpp  d3d_common.h  d3d_fence_event.h  decoder_thread.cpp  decoder_thread.h  decoderplugin.h  decoderplugin_dummy.cpp  decoderplugin_factory.cpp  decoderplugin_ffmpeg.cpp  decoderplugin_mediacodec.cpp  eye_gaze_interaction.h  foveation.h  geometry.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_factory.cpp  graphicsplugin_headless.cpp  graphicsplugin_opengl.cpp  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  interaction_manager.h  interaction_profiles.h  latency_manager.cpp  latency_manager.h  logger.cpp  logger.h  nal_utils.h  openxr_program.cpp  openxr_program.h  options.h  pch.h  (+5 more)
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/cuda/: WindowsSecurityAttributes.h  d3d11cuda_interop.h  d3d11cuda_interop.inl  d3d12cuda_interop.h  d3d12cuda_interop.inl  vulkancuda_interop.h  vulkancuda_interop.inl
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/d3d_shaders/: lobby.hlsl  passthroughBlend_frag.hlsl  passthroughMask_frag.hlsl  videoStream_frag.hlsl  videoStream_vert.hlsl
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/d3d_shaders/common/: baseVideoFrag.hlsl  decodeFoveation.hlsl  sRGBLinearize.hlsl  yuv3PlaneSampler.hlsl  yuvSampler.hlsl
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/d3d_shaders/precompiled/SM5/: lobby_frag.cso  lobby_vert.cso  passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso  videoStream_vert.cso
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/d3d_shaders/precompiled/SM5/fovDecode/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/d3d_shaders/precompiled/SM5/multivew/: lobby_frag.cso  lobby_vert.cso  passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso  videoStream_vert.cso
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/d3d_shaders/precompiled/multiview/: lobby_frag.cso  lobby_vert.cso  passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso  videoStream_vert.cso
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/vulkan_shaders/: lobby_frag.glsl  lobby_vert.glsl  passthroughBlend_frag.glsl  passthroughMask_frag.glsl  videoStream_frag.glsl  videoStream_vert.glsl
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/vulkan_shaders/common/: baseVideoFrag.glsl  decodeFoveation.glsl  sRGBLinearize.glsl
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/vulkan_shaders/precompiled/: lobby_vert.spv  videoStream_frag.spv  videoStream_vert.spv
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/vulkan_shaders/precompiled/fovDecode/: passthroughBlend_frag.spv  passthroughMask_frag.spv  videoStream_frag.spv
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/alxr_engine/vulkan_shaders/precompiled/multiview/: lobby_frag.spv  lobby_vert.spv  passthroughBlend_frag.spv  passthroughMask_frag.spv  videoStream_vert.spv
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/common/: xr_dependencies.h  xr_linear.h
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/loader/: CMakeLists.txt
alvr/openxr-client/alxr-engine-sys/cpp/ALVR-OpenXR-Engine/src/shn-libopenxr_loader/: readme.txt
alvr/openxr-client/alxr-engine-sys/src/: lib.rs
alvr/xtask/: Cargo.toml
alvr/xtask/src/: command.rs  dependencies.rs  main.rs  packaging.rs  version.rs
(+112 files in other folders)
