[package]
name = "alvr_xtask"
version = "18.2.3"
authors = ["alvr-org", "Riccardo Zaglia <riccardo.zaglia5@gmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.58"

[dependencies]
alvr_filesystem = { path = "../filesystem" }

fs_extra = "1"
pico-args = "0.4"
walkdir = "2"
pkg-config = "0.3.9"
cargo_metadata = "0.14"
camino = "1.0"
regex = "1.5"
lazy_static = "1.4"
